# 0xpwn

./: .gitignore  0xpwn-master-architecture.md  README.md  pyproject.toml  research.md
.github/workflows/: ci.yml  pypi-publish.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  completed-units.json
.gsd/milestones/M001/: M001-CONTEXT.md  M001-RESEARCH.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M001/slices/S01/: S01-ASSESSMENT.md  S01-PLAN.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S02/: S02-ASSESSMENT.md  S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S03/: S03-ASSESSMENT.md  S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S04/: S04-ASSESSMENT.md  S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M001/slices/S05/: S05-ASSESSMENT.md  S05-PLAN.md  S05-RESEARCH.md  S05-SUMMARY.md  S05-UAT.md
.gsd/milestones/M001/slices/S06/: S06-ASSESSMENT.md  S06-PLAN.md  S06-RESEARCH.md  S06-SUMMARY.md  S06-UAT.md
.gsd/milestones/M001/slices/S07/: S07-ASSESSMENT.md  S07-PLAN.md  (+3 more)
docker/: Dockerfile
src/oxpwn/: __init__.py
src/oxpwn/agent/: __init__.py  events.py  exceptions.py  prompts.py  react.py  tools.py
src/oxpwn/cli/: __init__.py  main.py  streaming.py  wizard.py
src/oxpwn/config/: __init__.py  manager.py
src/oxpwn/core/: __init__.py  models.py
src/oxpwn/enrichment/: __init__.py  cache.py  enrichment.py  nvd.py
src/oxpwn/llm/: __init__.py  client.py  exceptions.py
src/oxpwn/sandbox/: __init__.py  docker.py  exceptions.py
src/oxpwn/sandbox/tools/: __init__.py  ffuf.py  httpx.py  nmap.py  nuclei.py  subfinder.py
tests/: conftest.py
tests/fixtures/tool_suite/: ffuf-wordlist.txt
tests/fixtures/tool_suite/nuclei/: admin-panel.yaml
tests/fixtures/tool_suite/site/: index.html
tests/integration/: test_agent_integration.py  test_cli_integration.py  test_e2e_juiceshop.py  test_llm_integration.py  test_sandbox_integration.py  test_tool_suite_integration.py
tests/unit/: test_cli_main.py  test_cli_streaming.py  test_config_manager.py  test_cve_cache.py  test_docker_sandbox.py  test_enrichment.py  test_ffuf_parser.py  test_httpx_parser.py  test_llm_client.py  test_models.py  test_nmap_parser.py  test_nuclei_parser.py  test_nvd_client.py  test_react_agent.py  test_subfinder_parser.py  test_tool_registry.py  test_tool_streaming.py  test_wizard.py
(+46 files in other folders)
