[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "0xpwn"
version = "0.1.1"
description = "AI-powered penetration testing engine"
license = "Apache-2.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Vahagn Madatyan"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "pydantic>=2.0",
    "litellm==1.83.0",  # Pinned: 1.82.7/1.82.8 compromised, package quarantined on PyPI
    "typer>=0.9",
    "rich>=13.0",
    "structlog>=23.0",
    "httpx>=0.24",
    "docker>=7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/vahagn-madatyan/0xpwn"
Repository = "https://github.com/vahagn-madatyan/0xpwn"
Issues = "https://github.com/vahagn-madatyan/0xpwn/issues"

[project.scripts]
"0xpwn" = "oxpwn.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
